# yumold-erp-system

./: README.md  app.py  database_backup.sql  notification_helper.py  pyproject.toml  replit.md  requirements.txt
components/: note_widget.py
config/: database_config.py  ui_config.py
config_files/: __init__.py  cleanup_plan.py  ui_config.py  update_customer_structure.py
data/: account_info.csv  actual_purchases.csv  approvals.csv  approver_pool.csv  branch_admins.csv  branch_weekly_reports.csv  business_workflows.csv  business_workflows_v2.csv  cash_flow.csv  cash_transactions.csv  contract_status_history.csv  contracts.csv  customers.csv  customers_new.csv  department_budgets.csv  employee_posts.csv  employees.csv  exchange_rate_impact.csv  exchange_rates.csv  expense_approvals.csv  expense_requests.csv  inventory.csv  inventory_history.csv  invoices.csv  manual_exchange_rates.csv  master_products.csv  migration_log.csv  monthly_sales.csv  moq_pricing.csv  notices.csv  order_items.csv  order_status_history.csv  orders.csv  payments.csv  pdf_templates.json  personal_status.csv  product_codes.csv  product_price_history.csv  products.csv  purchase_orders.csv  (+21 more)
languages/: en.json  ko.json  vi.json
locales/: en.json  ko.json  vi.json
managers/: backup_manager.py
pages/: approval_page.py  approval_page_broken.py  approval_page_comprehensive.py  backup_page.py  business_process_page.py  business_process_page_new.py  business_process_v2_page.py  cash_flow_page.py  cash_transaction_page.py  contract_page.py  customer_page.py  dashboard_page.py  database_status_page.py  (+44 more)
(+136 files in other folders)
