[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "djaodjin-pages>=0.8.4",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.0",
    "trafilatura>=2.0.0",
]
